adicionei um parágrafo

--- a/site exemplo/index.html
+++ b/site exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aliquid voluptatibus nam tempora, eius enim quidem saepe earum libero quae. Quia laborum impedit itaque facere, pariatur illum. Consequatur, magni deserunt?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi aperiam amet vel autem molestias, unde praesentium iste laboriosam nostrum dolore quia dolores deleniti eum, rem aliquam iusto consequatur itaque quasi!</p>
 </body>
 </html>
